<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="me.nyaken.common.ViewUtil" />
        <variable
            name="vm"
            type="me.nyaken.gg_score.home.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pale_grey_two"
        tools:context=".home.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/pale_grey_two">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint_summoner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">

                        <ImageView
                            android:id="@+id/imageview_profile"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="36dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:item_circle_image_src="@{vm.summonerData.profileImageUrl}"/>

                        <TextView
                            style="@style/TextStyle"
                            android:id="@+id/textview_level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="33dp"
                            android:background="@drawable/shape_summoner_level"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp"
                            android:text="@{ViewUtil.getCurrencyString(vm.summonerData.level)}"
                            app:layout_constraintTop_toBottomOf="@id/imageview_profile"
                            app:layout_constraintBottom_toBottomOf="@id/imageview_profile"
                            app:layout_constraintStart_toStartOf="@id/imageview_profile"
                            app:layout_constraintEnd_toEndOf="@id/imageview_profile"
                            tools:text="247"/>

                        <TextView
                            style="@style/TextStyle2"
                            android:id="@+id/textview_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@{vm.summonerData.name}"
                            app:layout_constraintStart_toEndOf="@id/imageview_profile"
                            app:layout_constraintTop_toTopOf="@id/imageview_profile"
                            tools:text="USER"/>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardview_refresh_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:layout_constraintStart_toStartOf="@id/textview_user"
                            app:layout_constraintTop_toBottomOf="@id/textview_user"
                            app:cardBackgroundColor="@color/soft_blue"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="0dp">

                            <TextView
                                style="@style/TextStyle3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minWidth="89dp"
                                android:minHeight="36dp"
                                android:gravity="center"
                                android:text="@string/refresh_score"/>

                        </androidx.cardview.widget.CardView>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_leagues"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:minHeight="82dp"
                            android:layout_marginTop="41dp"
                            android:layout_marginBottom="20dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:clipToPadding="false"
                            android:orientation="horizontal"
                            app:item_leagues="@{vm.summonerData.leagues}"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imageview_profile"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/constraint_summoner"
                        android:layout_marginTop="8dp"
                        android:background="@color/white">

                        <TextView
                            style="@style/TextStyle7"
                            android:id="@+id/textview_summary_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score_summary"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                            style="@style/TextStyle7"
                            android:id="@+id/textview_summary_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:item_summary_score="@{vm.summonerSummaryData.summary}"
                            app:layout_constraintTop_toBottomOf="@id/textview_summary_title"
                            app:layout_constraintStart_toStartOf="@id/textview_summary_title"
                            tools:text="@string/text_format_score_summary"/>

                        <TextView
                            style="@style/TextStyle9"
                            android:id="@+id/textview_summary_score_kda"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            app:item_summary_score_kda="@{vm.summonerSummaryData.summary}"
                            app:layout_constraintTop_toBottomOf="@id/textview_summary_score"
                            app:layout_constraintStart_toStartOf="@id/textview_summary_score"
                            app:layout_constraintEnd_toStartOf="@id/textview_most_wins_title"
                            tools:text="0 / 0 / 0"/>

                        <TextView
                            style="@style/TextStyle10"
                            android:id="@+id/textview_kda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="12dp"
                            app:item_kda="@{vm.summonerSummaryData.summary}"
                            app:layout_constraintTop_toBottomOf="@id/textview_summary_score_kda"
                            app:layout_constraintStart_toStartOf="@id/textview_summary_score_kda"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:text="0:1 (0%)"/>

                        <TextView
                            style="@style/TextStyle8"
                            android:id="@+id/textview_position_title"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:text="@string/score_summary_position"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <ImageView
                            android:id="@+id/imageview_position"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginTop="10dp"
                            app:item_position_image="@{vm.summonerSummaryData.positions}"
                            app:layout_constraintTop_toBottomOf="@id/textview_position_title"
                            app:layout_constraintStart_toStartOf="@id/textview_position_title"
                            app:layout_constraintEnd_toEndOf="@id/textview_position_title"/>

                        <TextView
                            style="@style/TextStyle11"
                            android:id="@+id/textview_position_percent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:gravity="center"
                            app:item_position_percent="@{vm.summonerSummaryData.positions}"
                            app:layout_constraintTop_toBottomOf="@id/imageview_position"
                            app:layout_constraintStart_toStartOf="@id/textview_position_title"
                            app:layout_constraintEnd_toEndOf="@id/textview_position_title"
                            tools:text="0%"/>

                        <TextView
                            style="@style/TextStyle8"
                            android:id="@+id/textview_most_wins_title"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:text="@string/score_summary_most_wins"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/textview_position_title"/>

                        <ImageView
                            android:id="@+id/imageview_most_champion_1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="8dp"
                            app:item_champion_image="@{vm.summonerSummaryData.champions}"
                            app:item_champion_position="@{0}"
                            app:layout_constraintStart_toStartOf="@id/textview_most_wins_title"
                            app:layout_constraintTop_toBottomOf="@id/textview_most_wins_title"
                            app:layout_constraintEnd_toStartOf="@id/imageview_most_champion_2"
                            app:layout_constraintHorizontal_chainStyle="packed"/>

                        <TextView
                            style="@style/TextStyle11"
                            android:id="@+id/textview_most_champion_1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            app:item_champion_percent="@{vm.summonerSummaryData.champions}"
                            app:item_champion_position="@{0}"
                            app:layout_constraintStart_toStartOf="@id/imageview_most_champion_1"
                            app:layout_constraintTop_toBottomOf="@id/imageview_most_champion_1"
                            app:layout_constraintEnd_toEndOf="@id/imageview_most_champion_1"
                            tools:text="0%"/>

                        <ImageView
                            android:id="@+id/imageview_most_champion_2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"
                            app:item_champion_image="@{vm.summonerSummaryData.champions}"
                            app:item_champion_position="@{1}"
                            app:layout_constraintEnd_toEndOf="@id/textview_most_wins_title"
                            app:layout_constraintStart_toEndOf="@id/imageview_most_champion_1"
                            app:layout_constraintTop_toBottomOf="@id/textview_most_wins_title"/>

                        <TextView
                            style="@style/TextStyle11"
                            android:id="@+id/textview_most_champion_2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            app:item_champion_percent="@{vm.summonerSummaryData.champions}"
                            app:item_champion_position="@{1}"
                            app:layout_constraintStart_toStartOf="@id/imageview_most_champion_2"
                            app:layout_constraintTop_toBottomOf="@id/imageview_most_champion_2"
                            app:layout_constraintEnd_toEndOf="@id/imageview_most_champion_2"
                            tools:text="0%"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    android:visibility="gone"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetRight="0dp"
                    app:contentInsetEnd="0dp"
                    app:layout_collapseMode="pin">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            style="@style/TextStyle5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@{vm.summonerData.name}"
                            android:gravity="center"
                            tools:text="USER"/>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardview_refresh_score_in_toolbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_gravity="center_vertical|end"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:layout_constraintStart_toStartOf="@id/textview_user"
                            app:layout_constraintTop_toBottomOf="@id/textview_user"
                            app:cardBackgroundColor="@color/soft_blue"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="0dp">

                            <TextView
                                style="@style/TextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingEnd="8dp"
                                android:paddingTop="3dp"
                                android:paddingBottom="3dp"
                                android:gravity="center"
                                android:text="@string/refresh_score"/>

                        </androidx.cardview.widget.CardView>
                    </FrameLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <me.nyaken.widget.CustomRecycler
            android:id="@+id/list_matches"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>